Fix collapse arrow disappearing on small screens

--- a/frontend/src/components/dashboard/aliases/Alias.module.scss
+++ b/frontend/src/components/dashboard/aliases/Alias.module.scss
@@ -336,6 +336,7 @@ $trackerRemovalIndicatorWidth: 20px;
 }
 
 .expand-toggle {
+  flex: 0 0 auto;
   display: flex;
   align-items: center;
 
